# Guess5

./: .gitignore  ADMIN_DASHBOARD_SECURITY.md  ADMIN_SETUP_GUIDE.md  ARCHITECTURE.md  AWS_KMS_SETUP_GUIDE.md  BACKEND_EDGE_CASE_ENHANCEMENTS.md  BOT_PROTECTION_IMPLEMENTATION.md  BROADCAST_RETRY_OPTIMIZATION.md  DASHBOARD_QUICK_START.md  DEPLOYMENT.md  DEPLOYMENT_MIGRATION_STATUS.md  DEPLOYMENT_READINESS_ASSESSMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOY_SMART_CONTRACT.md  DIAGNOSIS_58c6d3a8.md  DIRECT_PAYMENT_APPROACH.md  ED25519_VERIFICATION_IMPLEMENTATION.md  EDGE_CASES_ANALYSIS.md  ENGINEERING_FIX_IMPLEMENTATION.md  ENVIRONMENT_VARIABLES.md  ENVIRONMENT_VARIABLES_AFTER_ESCROW_DEPLOYMENT.md  ENVIRONMENT_VARIABLES_GUIDE.md  ESCROW_AUDIT_FIXES.md  ESCROW_FLOW_GUIDE.md  ESCROW_INVESTIGATION_REPORT.md  ESCROW_SECURITY_VERIFICATION.md  ESCROW_SYSTEM_IMPLEMENTATION.md  EXECUTION_ACTIVATION_METHOD_ERROR_ANALYSIS.md  EXECUTION_EXPERT_FIXES_IMPLEMENTATION.md  EXECUTION_FAILURE_ANALYSIS.md  EXECUTION_FIX_SUMMARY.md  EXECUTION_FIX_VERIFICATION.md  EXECUTION_INVESTIGATION_REPORT_ba12974a.md  EXECUTION_ISSUE_ANALYSIS.md  EXECUTION_MONITOR_FIX_SUMMARY.md  EXECUTION_READY_TO_EXECUTE_ANALYSIS.md  EXECUTION_SIGNATURE_VERIFICATION_FAILURE_ANALYSIS.md  EXECUTION_STUCK_ANALYSIS.md  EXPERT_FIXES_IMPLEMENTED.md  FIXES.md  (+121 more)
.cursor/: mcp.json
backend/guess5-escrow/programs/guess5-escrow/: Cargo.toml
backend/guess5-escrow/programs/guess5-escrow/src/: lib.rs
backend/programs/game-escrow/: Anchor.toml  Cargo.toml
backend/programs/game-escrow/src/: fees.rs  lib.rs
backend/programs/game-escrow/tests/: escrow-tests.ts  integration_submit_result.ts
backend/smart-contract/programs/guess5-escrow/: Cargo.toml
backend/smart-contract/programs/guess5-escrow/src/: lib.rs
(+2097 files in other folders)
