[package]
name = "game-escrow"
version = "0.1.0"
description = "Non-custodial PvP game escrow system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18"

