[package]
name = "guess5-escrow"
version = "0.1.0"
description = "Non-custodial escrow system for Guess5 game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guess5_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
