[package]
name = "guess5-escrow"
version = "0.1.0"
description = "Non-custodial escrow system for Guess5 game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guess5_escrow"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
